# lvgl

./: .gitignore  Cargo.toml  README.md
doc/: NOTES.md  README.md
src/: dmfa.rs  lib.rs  types.rs
tests/fixtures/: 207527540-cipal.xlsx  207527540-dmfa.xlsx  207527540-verschil.xlsx  208322049-dmfa.xlsx  208322049-verschil.xlsx  dataframe.xlsx  test.xlsx
